--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
@@ -23,12 +25,15 @@
     "react-native-screens": "~3.10.1",
     "react-native-stories-view": "^1.0.9",
     "react-native-web": "0.17.1",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "concurrently": "^7.0.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.21",
     "typescript": "~4.3.5"
   },
   "private": true
